Baseline for positioning text overlayed on images. Issues with spacing between sections.

--- a/style.css
+++ b/style.css
@@ -29,7 +29,9 @@ a:visited {
   /*font-family: "Georgia Serif", serif;*/
   font-family: "Trebuchet MS", "Arial", sans-serif;
   font-size: 24px;
-  color: #777}
+  color: #777;
+  z-index: 100;
+}
 
 .banner_text {
   height: 3em;
@@ -115,4 +117,33 @@ h2:before {
 .navbar > ul > li > a:hover {
   background-color: #666;
   color: #222;
+}
+
+.section_container {
+  position: relative;
+  display: inline-block;
+}
+
+.text_container {
+  position: absolute;
+  height: 100%;
+  text-align: center;
+  width: 100%;
+}
+
+.text_container:before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+}
+
+.text_container > p {
+  display: inline-block;
+}
+
+.section_image {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
